@@ -303,8 +303,10 @@ setting is on, you are asked for confirmation before the modem is
 initialized.
 .TP 0.5i
 .B N
-Toggle between three states, whether each line is prefixed with current date
-and time, a timestamp is added every second, or no timestamps.
+Toggle between timestamp modes to be added to the output.
+Available are simple and extended time formats for each line,
+a delta to the previous line, a time display each second and no timestamps
+(the default).
 .TP 0.5i
 .B O
 Configure minicom. Puts you in the configuration menu.
